JT-2214 solved for long school addresses for neighborhood section
  - created view model for neighborhood section and added to school
    profile struct
  - moved goolge maps building out of school profile controllers into
    neighborhood struct
  - changed font size for school address if over the max char length
  - truncated the address and added a info hover when street address or
    city state, zip string are too long
  - added spec

--- a/app/assets/stylesheets/components/_neighborhood.scss
+++ b/app/assets/stylesheets/components/_neighborhood.scss
@@ -98,6 +98,9 @@
             float: none;
           }
         }
+        .contact-address.small-text {
+          font-size: 14px;
+        }
         .contact-item {
           font-size: 14px;
           margin: 20px;
